--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.6.4"
   }
 }
