--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
     "types": ["express"],
-    "esModuleInterop": true
+    "target": "ES2020",
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   }
 }
