--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "dev": "node --loader ts-node/esm index.ts\n",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,8 +23,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.6.4"
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21"
   }
 }
