--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "compilerOptions": {
-    "types": ["express"],
-    "target": "ES2020",
-    "module": "commonjs",
-    "strict": true,
+    "module": "ESNext",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "types": ["express"],
+    "moduleResolution": "nodenext",
+    "allowImportingTsExtensions": true,
   }
 }
