--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.5",
+    "ts-node": "^10.9.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
