--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
+    "typescript": "^4.5.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
