--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/socket.io": "^3.0.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
@@ -19,6 +21,7 @@
     "firebase-admin": "^12.0.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
     "typescript": "^4.5.5",
@@ -27,6 +30,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11"
   }
 }
